<resources>
    <string name="app_name">VAC Client</string>
    <string name="disconnect">Disconnect TCP/RTP</string>
    <string name="send">SEND</string>
    <string name="connect">Connect TCP/RTP</string>
    <string name="camera">Camera</string>
    <string name="rtp_port">RTP Port:</string>
    <string name="tcp_connection">TCP Connection:</string>
    <string name="ip">IP</string>
    <string name="text">Text</string>
</resources>
