<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_sql"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SQL" />

            <Button
                android:id="@+id/btn_tcpTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TCP Test" />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:text="@string/connect" />

                <Button
                    android:id="@+id/btn_disconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="0dp"
                    android:layout_weight="1"
                    android:text="@string/disconnect" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_rtp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rtp_port" />

            <TextView
                android:id="@+id/tv_tcp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:text="@string/tcp_connection" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>